@@ -2354,6 +2354,11 @@ WIDGET_DEFAULT = {
         "ffb_color": "#888888",
         "ffb_line_width": 2,
         "ffb_line_style": 0,
+        "show_steering": False,
+        "show_inverted_steering": False,
+        "steering_color": "#FFFFFF",
+        "steering_line_width": 2,
+        "steering_line_style": 0,
         "show_wheel_lock": True,
         "wheel_lock_color": "#FFFF00",
         "wheel_lock_line_width": 6,
@@ -2389,6 +2394,7 @@ WIDGET_DEFAULT = {
         "draw_order_index_brake": 1,
         "draw_order_index_clutch": 5,
         "draw_order_index_ffb": 6,
+        "draw_order_index_steering": 7,
         "draw_order_index_wheel_lock": 4,
         "draw_order_index_wheel_slip": 3,
     },
